--------------------
Bazaar Release Notes
--------------------

.. contents::

IN DEVELOPMENT
--------------

  CHANGES:

  FEATURES

  IMPROVEMENTS:

  BUG FIXES:

  DOCUMENTATION:

  API CHANGES:

  TESTING:

  INTERNALS:


bzr 1.7rc1 2008-09-09
---------------------

This release candidate for bzr 1.7 has several bug fixes and a few
performance and feature improvements.  ``bzr rm`` will now scan for
missing files and remove them, like how ``bzr add`` scans for unknown
files and adds them. A bit more polish has been applied to the stacking
code. The b-tree indexing code has been brought in, with an eye on using
it in a future repository format.


  CHANGES:

    * ``bzr export`` can now export a subdirectory of a project.
      (Robert Collins)

    * ``bzr rm`` will now scan for files that are missing and remove just
      them automatically, much as ``bzr add`` scans for new files that
      are not ignored and adds them automatically. (Robert Collins)

  FEATURES

    * Support for GSSAPI authentication when using FTP as documented in 
      RFC2228. (Jelmer Vernooij, #49623)

  IMPROVEMENTS:

    * A url like ``log+file:///tmp`` will log all access to that Transport 
      to ``.bzr.log``, which may help in debugging or profiling.
      (Martin Pool)

    * ``bzr branch`` and ``bzr push`` use the default stacking policy if the
      branch format supports it. (Aaron Bentley)

    * ``bzr init`` and ``bzr init-repo`` will now print out the same as
      ``bzr info`` if it completed successfully.
      (Marius Kruger)

    * ``bzr uncommit`` logs the old tip revision id, and displays how to
      restore the branch to that tip using ``bzr pull``.  This allows you
      to recover if you realize you uncommitted the wrong thing.
      (John Arbash Meinel)

    * ``SFTPTransport.readv()`` was accidentally using ``list += string``,
      which 'works', but adds each character separately to the list,